--- a/cv/templates/cv/cv_list.html
+++ b/cv/templates/cv/cv_list.html
@@ -1,7 +1,7 @@
 {% extends 'cv/base.html' %}
 
 {% block content %}
-<a class="btn btn-default" href="{% url 'cv_edit' %}"><span class="glyphicon glyphicon-pencil"></span></a>
+<a name='btn_edit' class="btn btn-default" href="{% url 'cv_edit' %}"><span class="glyphicon glyphicon-pencil"></span></a>
     <h2>Declan Fisher</h2>
     <h5>204 Hubert Road, Birmingham, B296ER, United Kingdom</h5>
     <p>+44 7388 130016 - declan.j.fisher@gmail.com</p>
